@@ -7,7 +7,9 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 == Unreleased
 
-_No changes since previous release._
+Bug Fixes::
+
+* fix incorrect spacing between entries in horizontal dlist when entry description crosses page boundary (#2614)
 
 == 2.3.22 (2025-10-23) - @mojavelinux
 
